--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: WEsharp
-email: dumuqiao0317@gmail.com
+email: 
 description: "WEsharp's Site"
 baseurl: ""
 url: "http://wesharp.github.io/"
